--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
         <link rel="icon" sizes="192x192" href="img/icon.png">
-        <script type="text/javascript" src="messages.js"></script>
-        <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
         <script type="text/javascript" src="screenfull.min.js"></script>
-        <script type="text/javascript" src="calculate.js"></script>
-        <script src="microphone.min.js"></script>
-        <script type="text/javascript" src="samaritan.js"></script>
-        <link rel="stylesheet" type="text/css" href="style.css">
+         <script async src="microphone.min.js"></script>
+         <script async type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+        <script async type="text/javascript" src="messages.js"></script>
+        <script async type="text/javascript" src="calculate.js"></script>
+        <script async type="text/javascript" src="samaritan.js"></script>
+        <style>
+            
+        </style>
     </head>
     <body>
         <div id="main">
