--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
         <link rel="icon" sizes="192x192" href="img/icon.png">
         <script async type="text/javascript" src="screenfull.min.js"></script>
-         <script async src="microphone.min.js"></script>
+         <script src="microphone.min.js"></script>
          <script async type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
         <script async type="text/javascript" src="messages.js"></script>
         <script async type="text/javascript" src="calculate.js"></script>
