--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <script type="text/javascript" src="screenfull.min.js"></script>
          <script src="microphone.min.js"></script>
          <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-        <script async type="text/javascript" src="messages.js"></script>
+        <script type="text/javascript" src="messages.js"></script>
         <script async type="text/javascript" src="calculate.js"></script>
         <script type="text/javascript" src="samaritan.js"></script>
     </head>
