--- a/en/index.html
+++ b/en/index.html
@@ -2,6 +2,16 @@
 <html>
     <head>
         <title>Samaritan</title>
+         <script>
+           var userLang = navigator.language || navigator.userLanguage;
+           if(userLang == "de"){
+             window.location.replace(window.location.href + "de/");
+           }
+           else
+          {
+           window.location.replace(window.location.href + "en/");
+         }
+        </script>
         <meta charset="UTF-8">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
