--- a/de/index.html
+++ b/de/index.html
@@ -5,11 +5,11 @@
         <script>
            var userLang = navigator.language || navigator.userLanguage;
            if(userLang == "de"){
-             window.location.replace(window.location.href + "de/");
+             window.location.replace("/de");
            }
            else
           {
-           window.location.replace(window.location.href + "en/");
+           window.location.replace("/en");
          }
         </script>
         <meta charset="UTF-8">
