--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <script>
 var userLang = navigator.language || navigator.userLanguage;
 if(userLang == "de"){
-  window.location.replace(window.location.href + "de/");
+  window.location.replace("/de");
 }
 else
 {
-  window.location.replace(window.location.href + "en/");
+  window.location.replace( "/en");
 }
 </script>
 </head>
