--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 <script>
+ var loc = window.location.href+' ';
+  if(loc.indexOf('http://')==0){
+    window.location.replace = loc.replace('http://','https://');
+    }
 var userLang = navigator.language || navigator.userLanguage;
 if(userLang == "de"){
   window.location.replace("/de");
