--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <script>
- var loc = window.location.href+' ';
-  if(loc.indexOf('http://')==0){
-    window.location.replace = loc.replace('http://','https://');
-    }
+if (window.location.protocol != "https:"){
+ window.location.replace = "https:" + window.location.href.substring(window.location.protocol.length);
+}
+/*
 var userLang = navigator.language || navigator.userLanguage;
 if(userLang == "de"){
   window.location.replace("/de");
@@ -14,6 +14,7 @@ else
 {
   window.location.replace( "/en");
 }
+*/
 </script>
 </head>
 </html>
