--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <script>
 if (window.location.protocol != "https:"){
- window.location.replace = "https:" + window.location.href.substring(window.location.protocol.length);
+ window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
 }
 var userLang = navigator.language || navigator.userLanguage;
 if(userLang == "de"){
