--- a/en/index.html
+++ b/en/index.html
@@ -4,7 +4,7 @@
         <title>Samaritan</title>
          <script>
          if (window.location.protocol != "https:"){
- window.location.replace = "https:" + window.location.href.substring(window.location.protocol.length);
+ window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
 }
            var userLang = navigator.language || navigator.userLanguage;
            if(userLang == "de"){
